# commander-os

./: .gitignore  .gitmodules  DESIGN.md  README.md  default.nix  shell.nix
components/kernel/: kernel.cpp  meson.build  meson.options
components/kernel/inc/drivers/fb/: fbdriver.h
components/kernel/inc/drivers/tty/: flantermtty.h  tty.h
components/kernel/src/: basic.cpp  start.cpp
components/kernel/src/drivers/fb/: liminefb.cpp
components/kernel/subprojects/flanterm/: meson.build
components/kernel/subprojects/hal-common/: meson.build
components/kernel/subprojects/hal-x86_64/: meson.build
components/kernel/subprojects/hal-x86_64/src/: basic.cpp
kernel/: meson.build
kernel/inc/: basic.h  logging.h
kernel/inc/drivers/fb/: liminefb.h
kernel/src/: cppglue.cpp  logging.cpp  start.cpp
kernel/src/drivers/tty/: flantermtty.cpp
kernel/subprojects/hal-common/inc/hal/: basic.h
kernel/subprojects/hal-x86_64/: meson.build
nix/: default.nix
nix/distro/: default.nix
nix/pkgs/: default.nix
nix/pkgs/kernel/: default.nix
nix/pkgs/limine/: default.nix
